--- a/mybrand.css
+++ b/mybrand.css
@@ -18,8 +18,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
-  margin: auto;
 }
 .logo-1 {
   display: flex;
@@ -27,19 +27,19 @@ body {
   gap: 12px;
 }
 nav {
-  width: 80%;
+  width: 100%;
 }
 .nav {
   display: flex;
   width: 100%;
-  padding: 20px 5%;
+  /* padding: 20px 5px; */
   justify-content: space-between;
   align-items: flex-start;
 }
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   overflow: hidden;
   width: 100%;
 }
@@ -1327,6 +1327,15 @@ li a {
   line-height: 24px; /* 150% */
 }
 @media screen and (max-width: 768px) {
+  .container-1 {
+    display: flex;
+    width: 100%;
+    margin-right: 0;
+    overflow-x: hidden;
+  }
+  .last-form-box9{
+    width: 90%;
+  }
   .form-1 {
     width: 100%;
     margin: auto;
@@ -1403,18 +1412,17 @@ li a {
     margin: auto;
   }
   .logo-1 {
-    /* position: absolute; */
-    display: block;
-    align-items: center;
-    left: 3%;
-    /* margin-bottom: 100px; */
-    margin: auto;
+    margin-top: 3%;
+    display: flex;
+    justify-self: flex-start;
+    margin-left: 3%;
   }
   .boxes-3 {
     flex-direction: column;
     margin: auto;
   }
   .box-2 {
+    width: 90%;
     flex-direction: column;
     margin: auto;
   }
@@ -1439,7 +1447,7 @@ li a {
   }
   .sub-port-2 {
     display: flex;
-    width: 100%;
+    width: 80%;
   }
   .sub-port-3 {
     flex-direction: column;
@@ -1482,7 +1490,7 @@ li a {
   }
   .box7-over {
     display: flex;
-    width: 100%;
+    width: 80%;
     align-items: flex-start;
     /* margin-left:-78%; */
     /* background-color: yellow; */
@@ -1510,24 +1518,29 @@ li a {
   }
 }
 @media screen and (max-width: 997px) {
+  .container-1{
+    width: 100%;
+    overflow-x: hidden;
+  }
   ul {
     display: none;
   }
   .humb-1 {
     position: absolute;
     display: block;
-    top: 5%;
+    top: 2%;
     left: 90%;
     font-size: 30px;
     cursor: pointer;
     color: #1c1e53;
   }
 }
-/* @media screen and (max-width: 439px) {
-  .intro-2{
-  width: auto;
-} */
+
 @media screen and (max-width: 1169px) {
+  .container-1{
+    width: 100%;
+    overflow-x: hidden;
+  }
   .box6-over {
     flex-direction: column;
   }
@@ -1535,7 +1548,7 @@ li a {
     display: flex;
     flex-direction: column;
     gap: 35px;
-    width: 100%;
+    width: 90%;
     margin: auto;
   }
 
@@ -1563,16 +1576,17 @@ li a {
     text-wrap: wrap;
   }
   .box7-what {
-    width: 100%;
+    width: 80%;
   }
 }
 
-@media screen and (max-width: 392px) {
+@media (max-width: 392px) {
   .container-1 {
+    display: flex;
     width: 100%;
-    margin: 0px !important;
-    padding: 0px;
+    overflow-x: hidden;
   }
+
   .sub-port-1 {
     word-break: break-all;
   }
