--- a/LogIn/Login.css
+++ b/LogIn/Login.css
@@ -5,6 +5,20 @@ body{
     overflow-x: hidden;
     overflow-y: hidden;
 }
+html {
+    scroll-behavior: smooth;
+  }
+  #back-1{
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+  }
+  #link-1{
+    text-decoration: none;
+    font-size: 26px;
+    color: #a53dff;
+    font-weight: 500;
+  }
 .container{
     display: flex;
     padding: 62px;
@@ -102,6 +116,12 @@ cursor: pointer;
     align-self: flex-end;
     text-decoration: none;
     font-weight: 600;
+}
+#create-1{
+    text-decoration: none;
+    font-size: 16px;
+    color: #A53DFF;
+    font-weight: 500;
 
 }
 @media (max-width: 768px) {
