--- a/mybrand.css
+++ b/mybrand.css
@@ -109,10 +109,10 @@ li a {
 .intro-1 {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  /* gap: 10px; */
   margin-top: 7%;
   color: var(--Gray-900, #132238);
-  font-family: Work Sans;
+  font-family: "Work Sans";
   font-size: 65px;
   font-style: normal;
   font-weight: 600;
@@ -1328,6 +1328,10 @@ li a {
   line-height: 24px; /* 150% */
 }
 @media screen and (max-width: 768px) {
+  .cont-port-1{
+    width: 100%;
+    margin: auto;
+  }
   .container-1 {
     display: flex;
     width: 100%;
@@ -1335,7 +1339,8 @@ li a {
     overflow-x: hidden;
   }
   .intro-1{
-    font-size: 35px;
+    line-height: 45px;
+    font-size: 30px;
     text-wrap: wrap;
   }
   .last-form-box9{
