--- a/Admin-panel/Admin.css
+++ b/Admin-panel/Admin.css
@@ -201,8 +201,10 @@ li a {
     gap: 20px;
 }
 .bar-2{
-    width: 381px;
-height: 370.978px;
+  display: flex;
+  flex-direction: column;
+    width: 100%;
+height: 400.978px;
 flex-shrink: 0;
 border-radius: 10px;
 background: #FFF;
@@ -211,9 +213,9 @@ background: #FFF;
 #text-1{
     display: flex;
     margin-top: 5%;
-    margin-left: 5%;
-    color: #000;
-font-size: 17px;
+    margin-left: 4%;
+    color: #603ded;
+font-size: 27px;
 font-style: normal;
 font-weight: 600;
 line-height: 16px; /* 94.118% */
@@ -356,7 +358,7 @@ line-height: 16px; /* 94.118% */
 }
 .left-side{
     display: flex;
-    width: 67%;
+    width: 60%;
 height: 760px;
 flex-shrink: 0;
 border-radius: 10px;
@@ -379,13 +381,6 @@ background: #FFF;
     gap: 12px;
     width: 100%;
   }
-  /* .av-1{
-    display: flex;
-    border: 1px solid #000;
-    width: 5%;
-    height: 5%;
-    border-radius: 50%;
-  } */
   .text-1{
     display: flex;
     flex-direction: column;
@@ -408,9 +403,127 @@ background: #FFF;
   #menu-1{
     display: none;
   }
+
+  .simple-1{
+    display: flex;
+    width: 40%;
+    height: 150px;
+    /* border: 1px solid #000; */
+    border-radius: 8px;
+    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
+    background-color: #03045e;
+  }
+  .simple-2{
+    display: flex;
+    width: 40%;
+    height: 150px;
+    /* border: 1px solid #000; */
+    border-radius: 8px;
+    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
+    background-color: #0077b6;
+  }
+  .simple-3{
+    display: flex;
+    width: 40%;
+    height: 150px;
+    /* border: 1px solid #000; */
+    border-radius: 8px;
+    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
+    background-color: #0030C7;
+  }
+  .simple-4{
+    display: flex;
+    width: 40%;
+    height: 150px;
+    /* border: 1px solid #000; */
+    border-radius: 8px;
+    /* box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12); */
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    background-color: #00b4d8;
+  }
+  #over-simple{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  #over-hard{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  #text-2{
+    display: flex;
+    font-size: 18px;
+    margin-left: 3%;
+    color: #FFF;
+  }
+  #text-p{
+    display: flex;
+    /* flex-direction: column; */
+    gap: 40px;
+    color: #FFF;
+    align-self: center;
+    margin-left: -22%;
+    margin-bottom: -22%;
+    font-size: 28px;
+  }
+  #text-u{
+    display: flex;
+    /* flex-direction: column; */
+    gap: 40px;
+    color: #FFF;
+    align-self: center;
+    margin-left: -48%;
+    margin-bottom: -22%;
+    font-size: 28px;
+  }
+  #text-o{
+    display: flex;
+    /* flex-direction: column; */
+    gap: 40px;
+    color: #FFF;
+    align-self: flex-end;
+    justify-self: flex-end;
+    margin-left: -32%;
+    /* margin-bottom: -22%; */
+    font-size: 25px;
+  }
 @media (max-width: 998px){
+  #text-p{
+    display: flex;
+    /* flex-direction: column; */
+    gap: 40px;
+    color: #FFF;
+    align-self: center;
+    margin-left: -9%;
+    margin-bottom: -12%;
+    font-size: 28px;
+  }
+  #text-u{
+    display: flex;
+    gap: 40px;
+    color: #FFF;
+    align-self: center;
+    margin-left: -18%;
+    margin-bottom: -12%;
+    font-size: 28px;
+  }
+  #text-o{
+    display: flex;
+    gap: 40px;
+    color: #FFF;
+    align-self: flex-end;
+    justify-self: flex-end;
+    margin-left: -13%;
+    font-size: 25px;
+  }
   .box-1{
     width: 100%;
+  }
+  #over-simple{
+    display: flex;
+    flex-direction: column;
   }
   #search-btn-2{
     display: block;
@@ -426,6 +539,9 @@ background: #FFF;
     .search__container{
         display: none;
     }
+    .search__container{
+      display: none;
+  }
 }
 @media (max-width: 1490px){
   .box-1{
@@ -433,6 +549,10 @@ background: #FFF;
   }
     .search__container{
         display: none;
+    }
+    #over-simple{
+      display: flex;
+      flex-direction: column;
     }
 }
 @media (max-width: 1449px) {
@@ -445,9 +565,13 @@ background: #FFF;
         width: 100%;
     }
     .bar-2{
-        width: 100%;
+      /* display: flex;
+      justify-self: center;
+      align-self: center;
+        width: 90%;
         margin: auto;
-    }
+        height: auto;
+    } */
     .left-side{
         display: flex;
         align-self: center;
@@ -459,8 +583,16 @@ background: #FFF;
     #search-btn{
         display: block;
     }
+    #over-simple{
+      display: flex;
+      flex-direction: column;
+    }
 }
 @media (max-width: 768px) {
+  #over-simple{
+    display: flex;
+    flex-direction: column;
+  }
   /* .av-1{
     display: flex;
     width: 5%;
@@ -506,8 +638,12 @@ background: #FFF;
         
     }
     .bar-2{
-        width: 100%;
+      display: flex;
+      align-self: center;
+      justify-self: center;
+        width:90%;
         margin: auto;
+        height: auto;
     }
     .box-3{
         display: flex;
