--- a/mybrand.css
+++ b/mybrand.css
@@ -4,6 +4,130 @@
   --Body: #1c1e53;
   --Gray-500: #424e60;
 }
+
+.other-box{
+  display: flex;
+padding: 100px 0px;
+flex-direction: column;
+justify-content: flex-end;
+align-items: center;
+gap: 50px;
+}
+.down-1{
+  display: flex;
+width: 100%;
+height: 128px;
+padding: 0px 300px;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
+}
+#off-1{
+  color: var(--Gray-900, #132238);
+font-family: "Work Sans";
+font-size: 48px;
+font-style: normal;
+font-weight: 600;
+line-height: 56px;
+}
+#off-p{
+  color: var(--Gray-400, #87909D);
+text-align: center;
+font-family: "Work Sans";
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; 
+width: 80%;
+word-break: break-all;
+}
+.our-cont{
+  display: flex;
+/* padding: 0px 300px; */
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 24px;
+}
+#first-1{
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+#last-1{
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+#my-1{
+  display: flex;
+padding-bottom: 32px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 32px;
+border-radius: 8px;
+border: 1px solid var(--Gray-100, #E6E8EB);
+background: var(--Gray-White, #FFF);
+box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
+
+}
+#pic-1{
+  width: 100%;
+height: 248px;
+border-radius: 8px 8px 0px 0px;
+background: url(./Pictures/benjamin-zanatta-WbkfJ2TmSug-unsplash.jpg), lightgray 50% / cover no-repeat;
+}
+#u-1{
+  display: flex;
+  color: var(--Gray-400, #87909D);
+font-family: "Work Sans";
+font-size: 12px;
+font-style: normal;
+font-weight: 500;
+line-height: 16px; /* 133.333% */
+}
+#the-1{
+  color: var(--Gray-900, #132238);
+font-family: "Work Sans";
+font-size: 18px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px;
+}
+#p-2{
+  color: var(--Body, #1C1E53);
+font-family: "Work Sans";
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px;
+width: 90%;
+}
+#press-1{
+  display: flex;
+padding: 12px 24px;
+justify-content: center;
+align-items: center;
+gap: 12px;
+border-radius: 4px;
+border: 1px solid var(--Primary-500, #A53DFF);
+background: var(--Gray-White, #FFF);
+color: var(--Primary-500, #A53DFF);
+
+/* Body/Regular/600 */
+font-family: "Work Sans";
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: 24px; /* 150% */
+}
 html {
   scroll-behavior: smooth;
 }
@@ -32,6 +156,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
+  /* overflow-x: hidden; */
 }
 .logo-1 {
   display: flex;
@@ -540,7 +665,7 @@ li a {
   gap: 50px;
   width: 100%;
   background-color: #fff;
-  margin: auto;
+  /* margin: auto; */
 }
 .sub-port-1 {
   color: var(--Gray-900, #132238);
@@ -553,7 +678,7 @@ li a {
 .sub-port-2 {
   color: var(--Gray-400, #87909d);
   text-align: center;
-  font-family: Work Sans;
+  font-family: "Work Sans";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -579,7 +704,7 @@ li a {
   border-radius: 8px;
   border: 1px solid var(--Gray-100, #e6e8eb);
   background: var(--Gray-White, #fff);
-  width: 100%;
+  /* width: 100%; */
 }
 .cont-port-1:hover{
  box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
@@ -639,7 +764,7 @@ li a {
 }
 .cont-port-2 {
   display: flex;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -647,7 +772,7 @@ li a {
   border-radius: 8px;
   border: 1px solid var(--Gray-100, #e6e8eb);
   background: var(--Gray-White, #fff);
-  width: 100%;
+  /* width: 100%; */
   /* box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12); */
 }
 .cont-port-2:hover{
@@ -696,7 +821,7 @@ li a {
 }
 .cont-port-3 {
   display: flex;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -1358,6 +1483,34 @@ li a {
   line-height: 24px; /* 150% */
 }
 @media screen and (max-width: 768px) {
+  #off-p{
+    word-break: break-all;
+    width: 80%;
+    margin: auto;
+  }
+  .our-cont{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: auto;
+  }
+  #my-1{
+    display: flex;
+    margin: auto;
+    width: 90%;
+  }
+  #first-1{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto;
+  }
+  #last-1{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto;
+  }
   .cont-port-1{
     display: flex;
     width: 100%;
@@ -1366,7 +1519,7 @@ li a {
   .container-1 {
     display: flex;
     width: 100%;
-    margin-right: 0;
+    /* margin-right: 0; */
     overflow-x: hidden;
   }
   .intro-1{
