--- a/LogIn/Login.css
+++ b/LogIn/Login.css
@@ -55,22 +55,44 @@ word-break: break-all;
 form{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     margin: auto; 
     width: 50%;
 }
 #name-2{
     color: #1E1E1E;
     font-family: "Work Sans";
-    font-size: 32px;
+    font-size: 25px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
 }
+#name_1:focus{
+ outline: 0;
+}
+#pass_1:focus{
+    outline: 0;
+}
+.one{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+.one.error {
+    border-color: #ff3860;
+}
+.one.success input{
+    border-color: #09c372;
+}
+.one .error{
+    color: #ff3800;
+    font-size: 13px;
+    /* height: 13px; */
+  }
 #pass-2{
     color: var(--Gray-500, #697484);
     font-family: "Work Sans";
-    font-size: 32px;
+    font-size: 25px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px; 
@@ -82,7 +104,8 @@ form{
 input{
     border: none;
     border-bottom: 1px solid #A53DFF;
-    font-size: 30px;
+    font-size: 20px;
+    gap: 20px;
 }
 #btn-1{
     display: flex;
@@ -116,6 +139,7 @@ cursor: pointer;
     align-self: flex-end;
     text-decoration: none;
     font-weight: 600;
+    margin-top: -5%;
 }
 #create-1{
     text-decoration: none;
