--- a/mybrand.css
+++ b/mybrand.css
@@ -57,6 +57,20 @@ gap: 24px;
   align-items: center;
   width: 90%;
 }
+.myBlog{
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  
+  /* height: 200px; */
+  /* overflow-x: auto; */
+}
+#under{
+  text-decoration: none;
+}
 #last-1{
   display: flex;
   flex-direction: row;
@@ -958,6 +972,7 @@ li a {
   gap: 24px;
   width: 100%;
   background-color: #fff;
+  overflow-x: auto;
 }
 .box6-top {
   display: flex;
@@ -986,6 +1001,21 @@ li a {
   width: 100%;
   word-break: break-all;
 }
+.myCard{
+  display: flex;
+  height: auto;
+  width: 50%;
+  padding-bottom: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 44px;
+  border-radius: 8px;
+border: 1px solid var(--Gray-50, #F0F1F3);
+background: var(--Gray-White, #FFF);
+/* margin-left: 5%; */
+/* box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12); */
+}
 .cont-box6 {
   display: flex;
   padding: 0px 100px;
@@ -994,7 +1024,7 @@ li a {
   align-items: center;
   gap: 70px;
 }
-.cont-box6-1 {
+.cont-box6 {
   display: flex;
   padding-bottom: 24px;
   flex-direction: column;
@@ -1044,9 +1074,9 @@ li a {
   color: #a53dff;
   text-align: left;
   text-decoration: none;
-  font-family: Work Sans;
+  font-family: "Work Sans";
 }
-.box6-over {
+.boxOver {
   display: flex;
   flex-direction: row;
   gap: 15px;
@@ -1543,6 +1573,9 @@ li a {
   line-height: 24px; /* 150% */
 }
 @media screen and (max-width: 768px) {
+  #leftbtn{
+    display: none;
+  }
   #off-p{
     word-break: break-all;
     width: 80%;
@@ -1653,7 +1686,7 @@ li a {
     width: 100%;
     word-break: break-all;
   }
-  .cont-box6-1 {
+  .myCard {
     width: 100%;
     margin: auto;
   }
@@ -1724,7 +1757,7 @@ li a {
     margin-top: 15%;
     cursor: pointer;
   }
-  .box6-over {
+  .boxOver {
     flex-direction: column;
     gap: 35px;
     /* width: 100%; */
@@ -1772,15 +1805,31 @@ li a {
   }
 }
 #leftbtn{
-  /* position: fixed;
-  left: 0%; */
+  position: relative;
+  margin-left: 0%; 
   display: flex;
   justify-self: center;
   align-self: center;
   font-size: 50px;
   cursor: pointer;
 }
+#rightbtn{
+  /* position: fixed; */
+  margin-right: -30%;
+  display: flex;
+  justify-self: center;
+  align-self: center;
+  font-size: 50px;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 997px) {
+  #leftbtn{
+    display: none;
+  }
+  #rightbtn{
+    display: none;
+  }
   .container-1{
     width: 100%;
     overflow-x: hidden;
@@ -1864,7 +1913,7 @@ li a {
     width: 100%;
     overflow-x: hidden;
   }
-  .box6-over {
+  .boxOver {
     flex-direction: column;
   }
   .box-1 {
