--- a/CRUD/Admin.css
+++ b/CRUD/Admin.css
@@ -5,7 +5,7 @@
   gap: 15px;
 }
 
-#form-0{
+#form{
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -21,10 +21,13 @@
 .one.error{
   border-color: #ff3860;
 }
-.one.error{
+.one, .error p{
   color: #ff3800;
   font-size: 13px;
   /* height: 13px; */
+}
+#headOne{
+  color: #000;
 }
 body {
   font-family: "Work Sans";
@@ -469,7 +472,7 @@ z-index: 1;
     font-size: 15px;
     /* z-index: -1; */
   }
-  #add-1{
+  #quickSub{
     display: flex;
 padding: 12px 24px;
 cursor: pointer;
