--- a/CRUD2/Containers.css
+++ b/CRUD2/Containers.css
@@ -1,13 +1,14 @@
 *{
     font-family: "Work Sans";
 }
-.content-1{
+.content_1{
     display: flex;
     align-items: center;
     justify-content: flex-start;
     margin-left: 2%;
-    gap: 5px;
-    margin-right: 2%;
+    gap: 10px;
+    /* margin-right: 2%; */
+    width: 100%;
 }
 /* #cont-1{
     display: flex;
@@ -23,7 +24,7 @@ border-radius: 8px;
 border: 1px solid var(--Gray-100, #E6E8EB);
 background: var(--Gray-White, #FFF);
 } */
-.cont-port-1 {
+.cont_port_1 {
     display: flex;
     padding-bottom: 32px;
     flex-direction: column;
@@ -34,13 +35,14 @@ background: var(--Gray-White, #FFF);
     border: 1px solid var(--Gray-100, #e6e8eb);
     background: var(--Gray-White, #fff);
     height: 430px;
-    
+    width: 20rem;
   }
   .cont-port-1:hover{
     box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
   }
   .cont-pic-1 {
     width: 100%;
+    height: 300px;
     border-radius: 8px 8px 0px 0px;
     background: url(./Pictures/image_processing20200616-29208-1lm1ktf.jpg),
       lightgray 50% / cover no-repeat;
@@ -114,7 +116,7 @@ background: var(--Gray-White, #FFF);
     box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
 }
 @media screen and (max-width: 840px) {
-    .content-1{
+    .content_1{
         display: flex;
         flex-direction: column;
         align-items: center;
