--- a/CRUD2/Containers.css
+++ b/CRUD2/Containers.css
@@ -1,13 +1,11 @@
 *{
     font-family: "Work Sans";
 }
-.content_1{
+.cont-card{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    /* justify-content: flex-start; */
-    margin-left: 5%;
     gap: 10px;
     /* margin-right: 2%; */
     width: 100%;
@@ -16,7 +14,7 @@
 .myCard{
   display: flex;
   /* height: 100%; */
-  width: 30%;
+  width: 20%;
   padding-bottom: 24px;
   flex-direction: column;
   justify-content: center;
