--- a/mybrand.css
+++ b/mybrand.css
@@ -153,6 +153,7 @@ body {
   height: 100vh;
   overflow-x: hidden;
   font-family: "Work Sans";
+  transition: 1s ease-in-out;
 }
 #scroll-1{
   position: fixed;
@@ -1001,10 +1002,10 @@ li a {
   width: 100%;
   word-break: break-all;
 }
-.myCard{
+.cont-card{
   display: flex;
   /* height: 100%; */
-  width: 30%;
+  width: 20%;
   padding-bottom: 24px;
   flex-direction: column;
   justify-content: center;
@@ -1017,15 +1018,14 @@ justify-self: center;
 /* margin-left: 5%; */
 /* box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12); */
 }
-/* .cont-box6 {
-  display: flex;
-  padding: 0px 100px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 70px;
-} */
 .cont-box6 {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 0px 100px;
+
+}
+/* .cont-box6 {
   display: flex;
   padding-bottom: 24px;
   flex-direction: column;
@@ -1035,9 +1035,8 @@ justify-self: center;
   border-radius: 8px;
   border: 1px solid var(--Gray-50, #f0f1f3);
   background: var(--Gray-White, #fff);
-  /* box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12); */
   width: 100%;
-}
+} */
 .img-box6 {
   border-radius: 8px 8px 0px 0px;
   width: 100%;
@@ -1046,7 +1045,7 @@ justify-self: center;
   background: url(./Pictures/altumcode-oZ61KFUQsus-unsplash.jpg),
     lightgray 50% / cover no-repeat, #c4c4c4;
 }
-.cont-box6-p {
+/* .cont-box6-p {
   color: var(--Gray-400, #87909d);
   font-family: Work Sans;
   font-size: 14px;
@@ -1054,7 +1053,7 @@ justify-self: center;
   font-weight: 400;
   line-height: 20px;
   word-break: break-all;
-}
+} */
 .cont-desc-p {
   display: flex;
   justify-self: center;
@@ -1076,20 +1075,15 @@ justify-self: center;
   text-align: left;
   text-decoration: none;
   font-family: "Work Sans";
+  cursor: pointer;
 }
-.boxOver {
+#Blogs {
   display: flex;
-  justify-content: center ;
-  align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-margin-left: 25%;
-  gap: 15px;
-  /* width: 100%; */
-  /* overflow-x: auto; */
-}
-.boxOver:nth-child(-n+5) {
-  order: -1;
+  width: 100%;
+  justify-content: center ;
+  gap: 25px;
 }
 .box-7 {
   display: flex;
@@ -1766,12 +1760,12 @@ margin-left: 25%;
     margin-top: 15%;
     cursor: pointer;
   }
-  .boxOver {
+  /* .boxOver {
     flex-direction: column;
     gap: 35px;
     width: 100%;
     margin: auto;
-  }
+  } */
   .box6-p {
     display: flex;
     font-size: 15px;
