--- a/CRUD2/Below.css
+++ b/CRUD2/Below.css
@@ -1,6 +1,10 @@
 .over-box {
   display: flex;
   gap: 20px;
+  transition: all 500ms ease-in-out;
+}
+body{
+
 }
 #tag-1{
   text-decoration: none;
@@ -90,7 +94,7 @@ li a {
   flex-direction: column;
   /* border: 1px solid #000; */
   width: 80%;
-  height: 720px;
+  height: auto;
   border-radius: 10px;
   background: #fff;
   gap: 60px;
