--- a/LogIn/Login.css
+++ b/LogIn/Login.css
@@ -4,6 +4,7 @@ body{
     background-color: #FFF;
     overflow-x: hidden;
     overflow-y: hidden;
+    transition:  900ms ease-in-out;
 }
 html {
     scroll-behavior: smooth;
