--- a/mybrand.css
+++ b/mybrand.css
@@ -4,7 +4,14 @@
   --Body: #1c1e53;
   --Gray-500: #424e60;
 }
-
+#like{
+  font-size: 20px;
+  cursor: pointer;
+}
+#comment{
+  font-size: 20px;
+  cursor: pointer;
+}
 .other-box{
   display: flex;
 padding: 100px 0px;
@@ -153,7 +160,7 @@ body {
   height: 100vh;
   overflow-x: hidden;
   font-family: "Work Sans";
-  transition: 1s ease-in-out;
+  transition:  900ms ease-in-out;
 }
 #scroll-1{
   position: fixed;
@@ -1005,7 +1012,7 @@ li a {
 .cont-card{
   display: flex;
   /* height: 100%; */
-  width: 20%;
+  width: 30%;
   padding-bottom: 24px;
   flex-direction: column;
   justify-content: center;
@@ -1054,6 +1061,10 @@ justify-self: center;
   line-height: 20px;
   word-break: break-all;
 } */
+.cont-box6-p{
+  display: flex;
+  gap: 25px;
+}
 .cont-desc-p {
   display: flex;
   justify-self: center;
@@ -1434,7 +1445,7 @@ justify-self: center;
   font-weight: 400;
   line-height: 24px; 
 }
-#inputOne{
+#username{
   border: none;
   border-bottom: 1px solid #a53dff;
   /* width: 560px; */
@@ -1450,7 +1461,7 @@ justify-self: center;
   font-weight: 400;
   line-height: 24px; 
 }
-#in_2 {
+#email {
   border: none;
   border-bottom: 1px solid #424e60;
   font-size: 15px;
@@ -1468,16 +1479,16 @@ justify-self: center;
   font-size: 15px;
   width: 100%;
 }
-#in_5{
+#message{
   border: none;
   border-bottom: 1px solid #424e60;
   font-size: 15px;
   width: 100%;
 }
-#inputOne:focus{
+#username:focus{
   outline: 0;
 }
-#in_2, #in_3, #in_4, #in_5:focus{
+#email, #in_3, #in_4, #message:focus{
   outline: 0;
 }
 
@@ -1760,12 +1771,12 @@ justify-self: center;
     margin-top: 15%;
     cursor: pointer;
   }
-  /* .boxOver {
+  .cont-card{
     flex-direction: column;
     gap: 35px;
     width: 100%;
     margin: auto;
-  } */
+  }
   .box6-p {
     display: flex;
     font-size: 15px;
