--- a/mybrand.css
+++ b/mybrand.css
@@ -1386,7 +1386,13 @@ justify-self: center;
   align-items: center;
   gap: 10px;
   border-radius: 4px;
+  color: #a53dff;
   background: var(--Primary-500, #a53dff);
+  /* box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12); */
+}
+.fb-1:hover {
+  background: var(--Primary-500, #a53dff);
+  color: #fff;
   box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
 }
 .drib-1 {
