--- a/Single-Blog/Single.css
+++ b/Single-Blog/Single.css
@@ -83,6 +83,26 @@ li a {
 .humb-1 {
   display: none;
 }
+#text-comment{
+  display: flex;
+  margin-left: 28%;
+  color: #503AE7;
+  font-size: 20px;
+}
+#text-value{
+  display: flex;
+  gap: 10px;
+  margin-left: 28%;
+  font-size: 20px;
+  color: #503AE7;
+}
+#icon-like{
+  font-size: 20px;
+  color:#503AE7;
+}
+#text-like{
+  color:#503AE7
+}
 .part-1 {
   display: flex;
   flex-direction: column;
