--- a/LogIn/Login.css
+++ b/LogIn/Login.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+*{
+transition:  900ms ease-in-out;
+}
 body{
     font-family: Work Sans;
     background-color: #FFF;
