--- a/CRUD/Admin.css
+++ b/CRUD/Admin.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
-
+*{
+  transition:  900ms ease-in-out;
+}
 #mybtn{
   display: flex;
   gap: 15px;
