--- a/Single-Blog/Single.css
+++ b/Single-Blog/Single.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
-
+*{
+  transition:  900ms ease-in-out;
+}
 .one{
   display: flex;
   flex-direction: column;
